// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Rule Renderer can render a rule with an x, y, and a smaller x2 value 1`] = `
Array [
  Object {
    "attrs": Object {
      "className": "mark-rule role-mark",
    },
    "children": Array [
      Object {
        "attrs": Object {
          "origin": Array [
            100,
            100,
          ],
          "strokeLinecap": "butt",
          "strokeLinejoin": "miter",
          "x2": -75,
        },
        "type": "line",
      },
    ],
    "type": "g",
  },
]
`;

exports[`The Rule Renderer can render a rule with an x, y, and a smaller y value 1`] = `
Array [
  Object {
    "attrs": Object {
      "className": "mark-rule role-mark",
    },
    "children": Array [
      Object {
        "attrs": Object {
          "origin": Array [
            100,
            100,
          ],
          "strokeLinecap": "butt",
          "strokeLinejoin": "miter",
          "y2": -75,
        },
        "type": "line",
      },
    ],
    "type": "g",
  },
]
`;

exports[`The Rule Renderer can render a rule with an x, y, and x2 value 1`] = `
Array [
  Object {
    "attrs": Object {
      "className": "mark-rule role-mark",
    },
    "children": Array [
      Object {
        "attrs": Object {
          "origin": Array [
            0,
            0,
          ],
          "strokeLinecap": "butt",
          "strokeLinejoin": "miter",
          "x2": 100,
        },
        "type": "line",
      },
    ],
    "type": "g",
  },
]
`;

exports[`The Rule Renderer can render a rule with an x, y, and y value 1`] = `
Array [
  Object {
    "attrs": Object {
      "className": "mark-rule role-mark",
    },
    "children": Array [
      Object {
        "attrs": Object {
          "origin": Array [
            0,
            0,
          ],
          "strokeLinecap": "butt",
          "strokeLinejoin": "miter",
          "y2": 100,
        },
        "type": "line",
      },
    ],
    "type": "g",
  },
]
`;
